package ru.android.fruits;

public abstract class Fruit {
    protected float weight;

    public float getWeight() {
        return weight;
    }
}
